--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -11,7 +11,7 @@ import background from '../assets/background.svg';
 				This server is coming up soon.
 			</h1>
 			<section id="links">
-				<a href="https://discord.gg/desperate"
+				<a href="https://discord.gg/Icyella"
 					>Join Icyella <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"
 						><path
 							fill="currentColor"
