--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,7 +8,7 @@ import background from '../assets/background.svg';
 	<main>
 		<section id="hero">
 			<h1>
-				This server is coming up soon.
+				This website is not done and will be up soon!
 			</h1>
 			<section id="links">
 				<a href="https://discord.gg/Icyella"
